--- a/ui-end-shelf/src/index.css
+++ b/ui-end-shelf/src/index.css
@@ -1,13 +1,78 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+html {
+    height: 100%;
+    font-family: Arial, sans-serif;
+}
+
+.display-header-wrapper {
+    display: flex;
+    height: 100vh;
+    background-color: #fdf1a5;
+}
+
+.text-content {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #b8c041;
+    padding: 50px;
+}
+
+.inside-text-content {
+    width: 100%;
+}
+
+.text-content h1 {
+    font-size: 4rem;
+    margin-bottom: 20px;
+    font-weight: 700;
+}
+
+.text-content p {
+    font-size: 1.2rem;
+    color: #2d3d37;
+    margin-bottom: 20px;
+}
+
+.text-content button {
+    padding: 10px 20px;
+    font-size: 1rem;
+    color: white;
+    background-color: #ff7d00;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.text-content button:hover {
+    background-color: #000000;
+}
+
+.image-content {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../src/assests/endShelf.png");
+    background-size: cover;
+}
+
+.image-content img {
+    max-width: 100%;
+    height: auto;
+}
+
+.image-wrapper {
+    min-height: 285px;
+    object-fit: fill;
 }
