--- a/ui-end-shelf/src/components/login/login.scss
+++ b/ui-end-shelf/src/components/login/login.scss
@@ -106,3 +106,12 @@ body {
         }
     }
 }
+
+.sign-in-color-wrapper {
+    color: #124838 !important;
+}
+
+.login-wrapper {
+    background: #f8f8f8 !important;
+    height: 93vh;
+}
