--- a/ui-end-shelf/src/index.css
+++ b/ui-end-shelf/src/index.css
@@ -11,12 +11,43 @@ body,
 html {
     height: 100%;
     font-family: Arial, sans-serif;
+    background-color: #f8f8f8;
+}
+
+.header-wrapper {
+    width: 100%;
+}
+
+@media (max-width: 425px) {
+    .inside-text-content h1 {
+        /* font-size: 12px !important; */
+        /* z-index: 0; */
+    }
+    .text-content h1 {
+        margin-top: 10rem !important;
+        font-size: 1.5rem !important;
+        margin-bottom: 20px;
+        font-weight: 900;
+        z-index: 0;
+    }
+    .image-content {
+        display: none !important;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .text-content h1 {
+        margin-top: 10rem !important;
+        font-size: 2.5rem !important;
+        margin-bottom: 20px;
+        font-weight: 900;
+    }
 }
 
 .display-header-wrapper {
     display: flex;
-    height: 90vh;
-    background-color: #fdf1a5;
+    height: 93vh;
+    background-color: #f8f8f8;
 }
 
 .text-content {
@@ -24,8 +55,16 @@ html {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #b8c041;
+    /* background-color: #b8c041; */
     padding: 50px;
+}
+
+.text-content h1 {
+    color: #2c3e50;
+}
+
+.text-content p {
+    color: #7f8c8d;
 }
 
 .inside-text-content {
@@ -48,10 +87,14 @@ html {
     padding: 10px 20px;
     font-size: 1rem;
     color: white;
-    background-color: #ff7d00;
+    background: linear-gradient(93deg, #85c7b3 -18.71%, #265c4c 117.68%);
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.button-wrapper {
+    background: linear-gradient(93deg, #85c7b3 -18.71%, #265c4c 117.68%);
 }
 
 .text-content button:hover {
@@ -63,7 +106,7 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../src/assests/endShelf.png");
+    background-image: url("../src/assests/logo-one.png");
     background-size: cover;
 }
 
@@ -75,4 +118,20 @@ html {
 .image-wrapper {
     min-height: 285px;
     object-fit: fill;
+}
+
+.nav-color-wrapper {
+    color: #f1f5f4 !important;
+}
+
+.table-wrapper {
+    border-color: #265c4c !important;
+    thead {
+        background: #ece2a0;
+    }
+}
+
+.nodata-wrapper {
+    /* p { */
+    /* } */
 }
